# random-number-microservice

./: .env  Cargo.toml  microservice.toml
src/: main.rs
